landing page alignment fixed

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -277,6 +277,7 @@ footer {
   background-color: #9aafa8;
   padding: 3.5rem;
   padding-top: 12%;
+  height: 700px;
 }
 
 .card-text-banner-header {
@@ -351,6 +352,7 @@ footer {
   background-color: #a8a78b;
   padding: 3.5rem;
   padding-top: 12%;
+  height: 700px;
 }
 /* Frames of Freedom */
 .fof {
